fix: search not full width on smaller screens

--- a/server/static/style.css
+++ b/server/static/style.css
@@ -337,6 +337,7 @@ header {
 
 .search {
     flex: 1;
+    width: 100%;
 }
 
 .search .input {
